# ChangeLog for snmp-agents/mysql-snmp
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mysql-snmp-1.0 (30 Jan 2010)

  30 Jan 2010; Justin Lecher (jlec) <jlec@j-schmitz.net>
  +mysql-snmp-1.0.ebuild, +files/mysql-snmp.confd, +files/mysql-snmp.rc,
  +metadata.xml:
  Initial addition
  ebuild imported from wolf overlay
