@@ -1,6 +1,10 @@
 # ChangeLog for snmp-agents/mysql-snmp
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  11 Jun 2013; Justin Lecher <jlec@gentoo.org> mysql-snmp-1.0.ebuild,
+  metadata.xml:
+  Bump to EAPI=5; bump to git-2
 
 *mysql-snmp-1.0 (30 Jan 2010)
 
